Create swagger for create product
